# apps/front/src/api/model/index.ts
@@ -28,30 +28,37 @@ export * from "./getShowParams";
 export * from "./getShowSeasonParams";
 export * from "./libraryContent";
 export * from "./libraryContentMovie";
+export * from "./libraryContentMovieData";
 export * from "./libraryContentMovieDataItem";
 export * from "./libraryContentMovieType";
 export * from "./libraryContentShow";
+export * from "./libraryContentShowData";
 export * from "./libraryContentShowDataItem";
 export * from "./libraryContentShowType";
 export * from "./libraryDTO";
 export * from "./libraryType";
 export * from "./loginBody";
+export * from "./mediaAndWatchToken";
 export * from "./mediaDTO";
+export * from "./playerSettings";
 export * from "./postAuthLogin201";
+export * from "./postPlayerEndParams";
+export * from "./postPlayerSeekParams";
 export * from "./queryEpisode";
 export * from "./queryLibrary";
 export * from "./queryMedia";
+export * from "./queryPlayer";
 export * from "./querySeason";
 export * from "./queryShow";
 export * from "./refreshBody";
 export * from "./registerBody";
 export * from "./seasonWithEpisodes";
 export * from "./seasonWithEpisodesEpisodesItem";
+export * from "./seekPlayer";
 export * from "./showWithSeasons";
 export * from "./showWithSeasonsSeasonsItem";
 export * from "./typeMOVIESidstringnamestringoverviewstringnullmediaIdstringlibraryIdstring";
 export * from "./typeMOVIESidstringnamestringoverviewstringnullmediaIdstringlibraryIdstringType";
 export * from "./typeTVSHOWSidstringnamestringoverviewstringnulllibraryIdstring";
 export * from "./typeTVSHOWSidstringnamestringoverviewstringnulllibraryIdstringType";
-export * from "./libraryContentMovieData";
-export * from "./libraryContentShowData";
+export * from "./startPlayerResponse";
