# apps/front/src/api/model/postPlayerEndParams.ts
@@ -5,8 +5,6 @@
  * OpenAPI spec version: 0.0.1
  */
 
-export type GetMediaPlayParams = {
-  seek: number;
-  media: string;
-  watchToken: string;
+export type PostPlayerEndParams = {
+  id: string;
 };
