# apps/front/src/api/model/postPlayerSeekParams.ts
@@ -5,8 +5,7 @@
  * OpenAPI spec version: 0.0.1
  */
 
-export type GetMediaPlayParams = {
+export type PostPlayerSeekParams = {
+  id: string;
   seek: number;
-  media: string;
-  watchToken: string;
 };
