# apps/front/src/api/model/queryPlayer.ts
@@ -5,8 +5,6 @@
  * OpenAPI spec version: 0.0.1
  */
 
-export type GetMediaPlayParams = {
-  seek: number;
-  media: string;
-  watchToken: string;
-};
+export interface QueryPlayer {
+  id: string;
+}
